Added the model mapper and configs